# dptp-core-client-sdk

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  log.rs
core/src/compute/: order.rs
core/src/orderbook/: mod.rs  types.rs
flutter_bridge/: Cargo.toml  README.md  build_rust.sh  pubspec.yaml
flutter_bridge/.dart_tool/: package_config.json  package_config_subset
flutter_bridge/lib/: bridge_generated_core.dart  dptp_core_client_sdk.dart  dptp_core_client_sdk_ffi.dart
flutter_bridge/lib/ios/: bridge_generated_core.h
flutter_bridge/lib/ios/dptp_core_sdk.xcodeproj/: project.pbxproj
flutter_bridge/rust/: Cargo.toml
flutter_bridge/rust/src/: api.rs  bridge_generated.rs  lib.rs  orders.rs
flutter_bridge/test/: dptp_core_client_sdk_method_channel_test.dart  dptp_core_client_sdk_test.dart
flutter_bridge/windows/: CMakeLists.txt  dptp_core_client_sdk_plugin.cpp  dptp_core_client_sdk_plugin.h  dptp_core_client_sdk_plugin_c_api.cpp
flutter_bridge/windows/include/dptp_core_client_sdk/: dptp_core_client_sdk_plugin_c_api.h
wasm/: Cargo.toml  build_and_publish.sh
wasm/src/: lib.rs  order.rs
wasm/tests/: lib_test.rs
