[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.12.4"
rust_decimal_macros = "1.29"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.40"


wasm-bindgen = "0.2.74"
