[package]
name = "dptp-core-sdk"
version = "0.1.942"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# external = { path = "../external" }
core = { path = "../core" }
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
rust_decimal = "1.15.0"
rust_decimal_macros = "1.15.0"
js-sys = "0.3.51"
serde = { version = "1.0.130", features = ["derive"] }
serde-wasm-bindgen = "0.4.0"
wasm-bindgen-test = "0.2.50"
console_error_panic_hook = "0.1.7"
