[package]
name = "dptp_core_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "dptp_core_sdk"
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../core" }
static_init = "1.0.3"
parking_lot ="0.12.1"
flutter_rust_bridge = "=1.34.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
js-sys = "0.3.51"
serde_derive = "1.0.0"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3"